upgrade to spring boot 3 and get docker file generating